admin form styling fix: .value for checkboxes/notes alignment

--- a/css/admin/admin.css
+++ b/css/admin/admin.css
@@ -2270,6 +2270,18 @@ body[data-skin="entrine"] .diadminform-row[data-purpose="notes"] .title {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: start;
+  -moz-box-align: start;
+  -o-box-align: start;
+  -ms-flex-align: start;
+  -webkit-align-items: flex-start;
+  align-items: flex-start;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -o-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
 }
 .diadminform-row[data-type="password"] .value {
   -webkit-box-lines: multiple;
