--- a/css/admin/stylus/parts/form.styl
+++ b/css/admin/stylus/parts/form.styl
@@ -80,6 +80,8 @@
         ^[0][data-type="checkboxes"] ^[1..-1]
         ^[0][data-purpose="notes"] ^[1..-1]
             flex-direction column
+            align-items flex-start
+            justify-content center
         ^[0][data-type="password"] ^[1..-1]
             flex-wrap wrap
         body[data-skin="entrine"] &
